[tool.poetry]
name = "accent-yt"
version = "0.1.0"
description = ""
authors = ["emekaborisama <borisphilosophy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ytb_downloader = "^0.3.2"
elevenlabs = "^1.3.1"
moviepy = "^1.0.3"
fastapi= "^0.111.0"
uvicorn= "^0.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
